--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,4 @@
 name = "evalix"
-compatibility_date = "2024-04-03"
+compatibility_date = "2024-11-01"
+compatibility_flags = [ "nodejs_compat" ]
 pages_build_output_dir = "./dist"
